# rinha_backend

./: .env  README.md  docker-compose.yml  nginx.conf  pyproject.toml
migrations/: env.py
migrations/versions/: 8ece29edbd68_inserindo_dados_iniciais.py  9516855246c5_criacao_usuarios_transacoes.py  99fbfc203e28_initial_tables.py  d2930559878f_inserindo_dados.py
rinha_backend/: engine.py  main.py  models.py  schemas.py
